OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/Collection_Team_Page__c.object-meta.xml
<CustomObject>
    <label>Collection Team Page</label>
    <nameField>
        <displayFormat>COLLECT-{000000}</displayFormat>
        <label>Collection Team Page Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Team Pages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>