OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Collection Team Pages</relationshipLabel>
    <relationshipName>Collection_Team_Pages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>