OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <formula>Account_Name__r.P10_Invoice_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account #</label>
    <type>Text</type>
</CustomField>