OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Amount_Over_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Amount_Over_Credit_Limit__c</fullName>
    <formula>Account_Name__r.Amount_Over_Credit_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Over Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>