OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/AX_Bad_Debt_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>AX_Bad_Debt_ID_Number__c</fullName>
    <label>AX Bad Debt ID Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>