OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Collection_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Collection_Team_Member__c</fullName>
    <label>Collection Team Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chasisty Allen</fullName>
            </value>
            <value>
                <fullName>James Hupp</fullName>
            </value>
            <value>
                <fullName>Nick White</fullName>
            </value>
            <value>
                <fullName>Tamekeo Mixon</fullName>
            </value>
            <value>
                <fullName>Stephen Creasy</fullName>
            </value>
            <value>
                <fullName>Heloisa Collier</fullName>
            </value>
            <value>
                <fullName>Sara Dixon</fullName>
            </value>
            <value>
                <fullName>Brian Tinnermon</fullName>
            </value>
            <value>
                <fullName>Heather Rogers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>