OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Credit_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Credit_Analyst__c</fullName>
    <formula>Account_Name__r.Credit_Analyst__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Analyst</label>
    <type>Text</type>
</CustomField>