OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <label>Current Status</label>
    <length>254</length>
    <type>Text</type>
</CustomField>