OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Date_Completed_Processed__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed_Processed__c</fullName>
    <label>Date Completed/Processed</label>
    <type>Date</type>
</CustomField>