OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Date_Sent_to_Outside_Collections__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_to_Outside_Collections__c</fullName>
    <label>Date Sent to Outside Collections</label>
    <type>Date</type>
</CustomField>