OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Days_Since_Last_Payment__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Payment__c</fullName>
    <inlineHelpText>will be populated in the future with automation</inlineHelpText>
    <label>Days Since Last Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>