OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Days_Since_Last_Payment_test__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Payment_test__c</fullName>
    <formula>Today()- Last_Payment_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Payment (test)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>