OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Describe_why_this_should_be_written_off__c.field-meta.xml
<CustomField>
    <fullName>Describe_why_this_should_be_written_off__c</fullName>
    <label>Describe why this should be written off</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>