OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/External_Collection_Team_Page_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Collection_Team_Page_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Collection Team Page ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>