OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Last_Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Pay_Date__c</fullName>
    <label>Last Pay Date</label>
    <type>Date</type>
</CustomField>