OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <formula>Account_Name__r.Last_Payment_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>