OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Last_Purchase_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Purchase_Activation_Date__c</fullName>
    <label>Last Purchase/Activation Date</label>
    <type>Date</type>
</CustomField>