OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Outside_Collections_Stage__c.field-meta.xml
<CustomField>
    <fullName>Outside_Collections_Stage__c</fullName>
    <label>Outside Collections Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending CF Approval</fullName>
            </value>
            <value>
                <fullName>Sent to Outside Collections</fullName>
            </value>
            <value>
                <fullName>Moved to Write Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>