OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Over_60__c.field-meta.xml
<CustomField>
    <fullName>Over_60__c</fullName>
    <formula>Account_Name__r.Over_60__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Over 60</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>