OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Past_Due_1_30__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_1_30__c</fullName>
    <formula>Account_Name__r.Past_Due_1_30__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Due 1-30</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>