OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Payment_Plan_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Method__c</fullName>
    <label>Payment Plan Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Move Money</fullName>
            </value>
            <value>
                <fullName>ACH/Check</fullName>
            </value>
            <value>
                <fullName>Credit/Debit Card</fullName>
            </value>
            <value>
                <fullName>Credits on Account</fullName>
            </value>
            <value>
                <fullName>Combo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>