OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Payment_Terms_Amount_Agreed_Upon__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Amount_Agreed_Upon__c</fullName>
    <label>Payment Terms Amount Agreed Upon</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>