OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Percent_of_Commission__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Commission__c</fullName>
    <label>Percent of Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>