OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Sales_Involvement_Actions_Taken__c.field-meta.xml
<CustomField>
    <fullName>Sales_Involvement_Actions_Taken__c</fullName>
    <label>Sales Involvement Actions Taken</label>
    <length>13000</length>
    <type>LongTextArea</type>
</CustomField>