OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Stopped__c.field-meta.xml
<CustomField>
    <fullName>Stopped__c</fullName>
    <formula>Account_Name__r.Stopped__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stopped</label>
    <type>Text</type>
</CustomField>