OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Total_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Past_Due__c</fullName>
    <formula>Account_Name__r.Total_Past_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Past Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>