OnboardingV2Minimal/force-app/main/default/objects/Collection_Team_Page__c/fields/Write_Off_Stage__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Stage__c</fullName>
    <label>Write Off Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending CF Manager Approval</fullName>
            </value>
            <value>
                <fullName>Pending VP Approval</fullName>
            </value>
            <value>
                <fullName>Proposal Submitted to Accounting</fullName>
            </value>
            <value>
                <fullName>Written Off by Accounting</fullName>
            </value>
            <value>
                <fullName>Approved via AX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>